(fix) navbar icon and label align

--- a/src/dashboard/components/Navbar/Navbar.css
+++ b/src/dashboard/components/Navbar/Navbar.css
@@ -40,6 +40,11 @@
   margin: 0;
 }
 
+.navbar-link {
+  display: flex;
+  align-items: center;
+}
+
 /* List item styles */
 .navbar li {
   display: flex;
